--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -22,7 +22,10 @@
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.cts",
-  "files": ["dist", "README.md"],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "concurrently \"npm run build:cjs\" \"npm run build:esm\"",
     "build:cjs": "tsup --format cjs --external react",
@@ -44,6 +47,7 @@
     "@iconicicons/react": "latest",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -57,6 +61,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "clsx": "^2.0.0",
+    "cmdk": "^1.0.0",
     "color": "^4.2.3",
     "color2k": "^2.0.3",
     "cva": "1.0.0-beta.1",
@@ -64,6 +69,7 @@
     "downshift": "^8.2.3",
     "flat": "^6.0.1",
     "lodash.omit": "^4.5.0",
+    "lucide-react": "^0.360.0",
     "react-hook-form": "^7.50.0",
     "tailwind-merge": "^2.2.0"
   },
