--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "changeset": "changeset",
     "lint": "pnpm --stream -r lint",
     "lint:biome": "pnpm --stream -r lint:biome",
+    "lint:biome:fix": "pnpm --stream -r lint:biome:fix",
     "start": "pnpm --stream -r start",
     "start:dev": "pnpm --stream --parallel -r start:dev"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.5.3",
+    "@biomejs/biome": "1.7.1",
     "@changesets/cli": "2.26.2",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.56",
