--- a/packages/@geee-be/react-utils/package.json
+++ b/packages/@geee-be/react-utils/package.json
@@ -14,6 +14,7 @@
     "build-storybook": "storybook build",
     "lint": "npm run lint:biome && npm run lint:types && npm run lint:unused-exports",
     "lint:biome": "biome ci src/",
+    "lint:biome:fix": "biome check src/ --apply",
     "lint:types": "tsc --noEmit",
     "lint:unused-exports": "ts-unused-exports tsconfig.unused-exports.json --excludePathsFromReport=src/index.ts",
     "prestart:dev": "rimraf dist/*",
