--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -22,10 +22,7 @@
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.cts",
-  "files": [
-    "dist",
-    "README.md"
-  ],
+  "files": ["dist", "README.md"],
   "scripts": {
     "build": "concurrently \"npm run build:cjs\" \"npm run build:esm\"",
     "build:cjs": "tsup --format cjs --external react",
@@ -69,6 +66,8 @@
     "cva": "1.0.0-beta.1",
     "deepmerge": "^4.3.1",
     "downshift": "^8.2.3",
+    "embla-carousel": "^8.1.8",
+    "embla-carousel-react": "^8.1.8",
     "flat": "^6.0.1",
     "lodash.omit": "^4.5.0",
     "lucide-react": "^0.360.0",
@@ -76,23 +75,16 @@
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1",
     "@happy-dom/global-registrator": "^12.10.3",
-    "@storybook/addon-docs": "7.6.6",
-    "@storybook/addon-essentials": "7.6.6",
-    "@storybook/addon-interactions": "7.6.6",
-    "@storybook/addon-links": "7.6.6",
-    "@storybook/addon-styling": "1.3.7",
-    "@storybook/addons": "7.6.6",
-    "@storybook/blocks": "7.6.6",
-    "@storybook/channel-postmessage": "7.6.6",
-    "@storybook/channel-websocket": "7.6.6",
-    "@storybook/client-api": "7.6.6",
-    "@storybook/preview-api": "7.6.6",
-    "@storybook/preview-web": "7.6.6",
-    "@storybook/react": "7.6.6",
-    "@storybook/react-vite": "7.6.6",
-    "@storybook/testing-library": "0.2.2",
-    "@storybook/types": "7.6.6",
+    "@storybook/addon-docs": "^8.2.9",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/preview-api": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-vite": "^8.2.9",
+    "@storybook/test": "^8.2.9",
+    "@storybook/types": "^8.2.9",
     "@swc/core": "^1.3.101",
     "@testing-library/react": "^14.1.2",
     "@types/color": "^3.0.6",
@@ -105,8 +97,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "7.6.6",
-    "storybook-dark-mode": "^3.0.1",
+    "storybook": "^8.2.9",
+    "storybook-dark-mode": "^4.0.2",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
     "tsup": "^8.0.1"
