--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -77,6 +77,7 @@
     "lodash.omit": "^4.5.0",
     "lucide-react": "^0.429.0",
     "react-hook-form": "^7.52.2",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
