--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -22,10 +22,7 @@
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.cts",
-  "files": [
-    "dist",
-    "README.md"
-  ],
+  "files": ["dist", "README.md"],
   "scripts": {
     "build": "concurrently \"npm run build:cjs\" \"npm run build:esm\"",
     "build:cjs": "tsup --format cjs --external react",
@@ -46,39 +43,40 @@
     "@geee-be/core": "latest",
     "@geee-be/react-utils": "workspace:*",
     "@iconicicons/react": "latest",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@uidotdev/usehooks": "2.4.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "color": "^4.2.3",
     "color2k": "^2.0.3",
     "cva": "1.0.0-beta.1",
     "deepmerge": "^4.3.1",
     "downshift": "^8.2.3",
-    "embla-carousel": "^8.1.8",
-    "embla-carousel-react": "^8.1.8",
+    "embla-carousel": "^8.2.1",
+    "embla-carousel-react": "^8.2.1",
     "flat": "^6.0.1",
     "input-otp": "^1.2.4",
     "lodash.omit": "^4.5.0",
-    "lucide-react": "^0.429.0",
-    "react-hook-form": "^7.52.2",
+    "lucide-react": "^0.438.0",
+    "react-hook-form": "^7.53.0",
     "react-toastify": "^10.0.5",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.5.2",
+    "vaul": "^0.9.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1",
