--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -62,7 +62,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@uidotdev/usehooks": "2.4.1",
+    "advanced-cropper": "^0.17.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "color": "^4.2.3",
@@ -75,10 +77,13 @@
     "flat": "^6.0.1",
     "input-otp": "^1.2.4",
     "lodash.omit": "^4.5.0",
-    "lucide-react": "^0.438.0",
+    "lucide-react": "^0.441.0",
+    "react-advanced-cropper": "^0.20.0",
+    "react-dropzone-esm": "^15.0.1",
     "react-hook-form": "^7.53.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
+    "use-debounce": "^10.0.3",
     "vaul": "^0.9.2"
   },
   "devDependencies": {
