--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -63,7 +63,6 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@uidotdev/usehooks": "2.4.1",
     "advanced-cropper": "^0.17.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -84,6 +83,7 @@
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
     "use-debounce": "^10.0.3",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.2"
   },
   "devDependencies": {
