--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -22,10 +22,7 @@
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.cts",
-  "files": [
-    "dist",
-    "README.md"
-  ],
+  "files": ["dist", "README.md"],
   "scripts": {
     "build": "concurrently \"npm run build:cjs\" \"npm run build:esm\"",
     "build:cjs": "tsup --format cjs --external react",
@@ -82,6 +79,7 @@
     "react-hook-form": "^7.53.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.1",
     "use-debounce": "^10.0.3",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.2"
@@ -111,7 +109,6 @@
     "react-dom": "^18.2.0",
     "storybook": "^8.2.9",
     "storybook-dark-mode": "^4.0.2",
-    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
     "tsup": "^8.0.1"
   },
