--- a/packages/@geee-be/react-utils/package.json
+++ b/packages/@geee-be/react-utils/package.json
@@ -40,5 +40,8 @@
   "peerDependencies": {
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
+  },
+  "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1"
   }
 }
