--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -26,7 +26,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "advanced-cropper": "^0.17.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
+    "cmdk": "^1.1.1",
     "color": "^4.2.3",
     "color2k": "^2.0.3",
     "cva": "1.0.0-beta.1",
@@ -38,7 +38,7 @@
     "flat": "^6.0.1",
     "input-otp": "^1.4.1",
     "lodash.omit": "^4.5.0",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "latest",
     "react-advanced-cropper": "^0.20.0",
     "react-day-picker": "^9.6.7",
     "react-dropzone-esm": "^15.2.0",
@@ -91,10 +91,7 @@
       }
     }
   },
-  "files": [
-    "dist",
-    "README.md"
-  ],
+  "files": ["dist", "README.md"],
   "keywords": [],
   "license": "MIT",
   "main": "./dist/cjs/index.cjs",
