--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -1,84 +1,12 @@
 {
-  "author": "",
-  "dependencies": {
-    "@geee-be/core": "latest",
-    "@geee-be/react-utils": "workspace:*",
-    "@iconicicons/react": "latest",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "advanced-cropper": "^0.17.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "color": "^4.2.3",
-    "color2k": "^2.0.3",
-    "cva": "1.0.0-beta.1",
-    "date-fns": "^4.1.0",
-    "deepmerge": "^4.3.1",
-    "downshift": "^8.5.0",
-    "embla-carousel": "^8.5.1",
-    "embla-carousel-react": "^8.5.1",
-    "flat": "^6.0.1",
-    "input-otp": "^1.4.1",
-    "lodash.omit": "^4.5.0",
-    "lucide-react": "^0.453.0",
-    "react-advanced-cropper": "^0.20.0",
-    "react-day-picker": "^9.6.7",
-    "react-dropzone-esm": "^15.2.0",
-    "react-hook-form": "^7.53.2",
-    "react-toastify": "^10.0.6",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss": "^3.4.15",
-    "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.4",
-    "usehooks-ts": "^3.1.0",
-    "vaul": "^0.9.9"
-  },
+  "name": "@geee-be/react-twui",
+  "version": "1.6.18",
   "description": "",
-  "devDependencies": {
-    "@happy-dom/global-registrator": "^12.10.3",
-    "@storybook/addon-docs": "^8.4.5",
-    "@storybook/addon-essentials": "^8.4.5",
-    "@storybook/blocks": "^8.4.5",
-    "@storybook/preview-api": "^8.4.5",
-    "@storybook/react": "^8.4.5",
-    "@storybook/react-vite": "^8.4.5",
-    "@storybook/test": "^8.4.5",
-    "@storybook/types": "^8.4.5",
-    "@swc/core": "^1.9.2",
-    "@testing-library/react": "^14.3.1",
-    "@types/color": "^3.0.6",
-    "@types/jest": "^29.5.14",
-    "@types/lodash.omit": "^4.5.9",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.20",
-    "concurrently": "^8.2.2",
-    "jest-environment-jsdom": "^29.7.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "storybook": "^8.4.5",
-    "storybook-dark-mode": "^4.0.2",
-    "ts-jest": "^29.2.5",
-    "tsup": "^8.3.5"
-  },
+  "keywords": [],
+  "license": "MIT",
+  "author": "",
+  "sideEffects": false,
+  "type": "module",
   "exports": {
     ".": {
       "import": {
@@ -91,30 +19,10 @@
       }
     }
   },
-  "files": [
-    "dist",
-    "README.md"
-  ],
-  "keywords": [],
-  "license": "MIT",
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.js",
-  "name": "@geee-be/react-twui",
-  "peerDependencies": {
-    "@types/react": "*",
-    "@types/react-dom": "*",
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
-    "tailwindcss": "*"
-  },
-  "peerDependenciesMeta": {
-    "@types/react": {
-      "optional": true
-    },
-    "@types/react-dom": {
-      "optional": true
-    }
-  },
+  "types": "./dist/cjs/index.d.cts",
+  "files": ["dist", "README.md"],
   "scripts": {
     "build": "concurrently \"npm run build:cjs\" \"npm run build:esm\"",
     "build:cjs": "tsup --format cjs --external react",
@@ -131,8 +39,97 @@
     "lint:unused-exports": "ts-unused-exports tsconfig.unused-exports.json --excludePathsFromReport=src/index.ts",
     "storybook": "storybook dev -p 6006 --ci"
   },
-  "sideEffects": false,
-  "type": "module",
-  "types": "./dist/cjs/index.d.cts",
-  "version": "1.6.18"
+  "dependencies": {
+    "@geee-be/core": "latest",
+    "@geee-be/react-utils": "workspace:*",
+    "@iconicicons/react": "latest",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "advanced-cropper": "^0.17.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "color": "^4.2.3",
+    "color2k": "^2.0.3",
+    "cva": "1.0.0-beta.1",
+    "date-fns": "^4.1.0",
+    "deepmerge": "^4.3.1",
+    "downshift": "^8.5.0",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "flat": "^6.0.1",
+    "input-otp": "^1.4.2",
+    "lodash.omit": "^4.5.0",
+    "lucide-react": "^0.453.0",
+    "react-advanced-cropper": "^0.20.1",
+    "react-day-picker": "^9.7.0",
+    "react-dropzone-esm": "^15.2.0",
+    "react-hook-form": "^7.58.1",
+    "react-toastify": "^10.0.6",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.5",
+    "usehooks-ts": "^3.1.1",
+    "vaul": "^0.9.9"
+  },
+  "devDependencies": {
+    "@happy-dom/global-registrator": "^18.0.1",
+    "@storybook/addon-docs": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/preview-api": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@storybook/types": "^8.6.14",
+    "@swc/core": "^1.12.6",
+    "@testing-library/react": "^14.3.1",
+    "@types/color": "^3.0.6",
+    "@types/jest": "^29.5.14",
+    "@types/lodash.omit": "^4.5.9",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^8.2.2",
+    "jest-environment-jsdom": "^29.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "storybook": "^8.6.14",
+    "storybook-dark-mode": "^4.0.2",
+    "ts-jest": "^29.4.0",
+    "tsup": "^8.5.0"
+  },
+  "peerDependencies": {
+    "@types/react": "*",
+    "@types/react-dom": "*",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0",
+    "tailwindcss": "*"
+  },
+  "peerDependenciesMeta": {
+    "@types/react": {
+      "optional": true
+    },
+    "@types/react-dom": {
+      "optional": true
+    }
+  }
 }
