--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -95,14 +95,8 @@
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "^18.0.1",
-    "@storybook/addon-docs": "^8.6.14",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/preview-api": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/react-vite": "^8.6.14",
-    "@storybook/test": "^8.6.14",
-    "@storybook/types": "^8.6.14",
+    "@storybook/addon-docs": "^9.1.3",
+    "@storybook/react-vite": "^9.1.3",
     "@swc/core": "^1.12.6",
     "@testing-library/react": "^14.3.1",
     "@types/color": "^3.0.6",
@@ -115,10 +109,11 @@
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "storybook": "^8.6.14",
+    "storybook": "^9.1.3",
     "storybook-dark-mode": "^4.0.2",
     "ts-jest": "^29.4.0",
-    "tsup": "^8.5.0"
+    "tsup": "^8.5.0",
+    "eslint-plugin-storybook": "9.1.3"
   },
   "peerDependencies": {
     "@types/react": "*",
