--- a/biome.json
+++ b/biome.json
@@ -1,38 +1,62 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.7.1/schema.json",
-  "files": {
-    "ignore": []
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "off"
+      }
+    }
   },
-  "organizeImports": {
-    "enabled": false
+  "css": {
+    "formatter": {
+      "enabled": true,
+      "indentStyle": "space",
+      "lineWidth": 120
+    }
+  },
+  "files": {
+    "includes": ["**"]
   },
   "formatter": {
     "indentStyle": "space"
   },
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "single"
+    }
+  },
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
       "complexity": {
         "useLiteralKeys": "off"
       },
       "performance": {
         "noAccumulatingSpread": "off"
       },
+      "recommended": true,
+      "style": {
+        "noInferrableTypes": "error",
+        "noParameterAssign": "error",
+        "noUnusedTemplateLiteral": "error",
+        "noUselessElse": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useNumberNamespace": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error"
+      },
       "suspicious": {
         "noExplicitAny": "off"
       }
     }
   },
+  "root": false,
   "vcs": {
-    "enabled": true,
     "clientKind": "git",
-    "useIgnoreFile": true,
-    "defaultBranch": "master"
-  },
-  "javascript": {
-    "formatter": {
-      "quoteStyle": "single"
-    }
+    "defaultBranch": "master",
+    "enabled": true,
+    "useIgnoreFile": true
   }
 }
