--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -24,6 +24,7 @@
   "types": "./dist/cjs/index.d.cts",
   "files": [
     "dist",
+    "css",
     "README.md"
   ],
   "scripts": {
@@ -98,6 +99,7 @@
     "@storybook/addon-docs": "^9.1.3",
     "@storybook/react-vite": "^9.1.3",
     "@swc/core": "^1.13.5",
+    "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/react": "^16.3.0",
     "@types/color": "^4.2.0",
     "@types/jest": "^30.0.0",
@@ -108,6 +110,7 @@
     "concurrently": "^9.2.1",
     "eslint-plugin-storybook": "9.1.3",
     "jest-environment-jsdom": "^30.1.1",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "storybook": "^9.1.3",
