--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -89,7 +89,6 @@
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
-    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.5",
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2"
@@ -116,7 +115,8 @@
     "storybook": "^9.1.3",
     "storybook-dark-mode": "^4.0.2",
     "ts-jest": "^29.4.1",
-    "tsup": "^8.5.0"
+    "tsup": "^8.5.0",
+    "tw-animate-css": "^1.3.8"
   },
   "peerDependencies": {
     "@types/react": "*",
