--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -89,6 +89,7 @@
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.8",
     "use-debounce": "^10.0.5",
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2"
@@ -115,15 +116,14 @@
     "storybook": "^9.1.3",
     "storybook-dark-mode": "^4.0.2",
     "ts-jest": "^29.4.1",
-    "tsup": "^8.5.0",
-    "tw-animate-css": "^1.3.8"
+    "tsup": "^8.5.0"
   },
   "peerDependencies": {
     "@types/react": "*",
     "@types/react-dom": "*",
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
-    "tailwindcss": "*"
+    "react": ">=19.0.0",
+    "react-dom": ">=19.0.0",
+    "tailwindcss": ">=4.1"
   },
   "peerDependenciesMeta": {
     "@types/react": {
