--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -1,8 +1,21 @@
 {
   "name": "@geee-be/react-twui",
   "version": "2.0.15",
-  "description": "",
-  "keywords": [],
+  "description": "A comprehensive React UI component library built with Tailwind CSS v4 and Radix UI primitives. Features an intuitive compound component API, full TypeScript support, and accessibility-first design.",
+  "keywords": [
+    "react",
+    "ui",
+    "components",
+    "tailwindcss",
+    "tailwind",
+    "radix-ui",
+    "typescript",
+    "compound-components",
+    "accessibility",
+    "design-system",
+    "ui-library",
+    "frontend"
+  ],
   "license": "MIT",
   "author": "",
   "sideEffects": false,
