--- a/packages/@geee-be/react-utils/package.json
+++ b/packages/@geee-be/react-utils/package.json
@@ -1,8 +1,20 @@
 {
   "name": "@geee-be/react-utils",
   "version": "1.3.1",
-  "description": "",
-  "keywords": [],
+  "description": "A collection of powerful, type-safe React hooks and utility functions. Includes state management, SSR-compatible hooks, device detection, and browser API wrappers.",
+  "keywords": [
+    "react",
+    "hooks",
+    "utilities",
+    "typescript",
+    "ssr",
+    "nextjs",
+    "state-management",
+    "browser-api",
+    "device-detection",
+    "frontend",
+    "react-hooks"
+  ],
   "license": "MIT",
   "author": "Greg Bacchus",
   "type": "module",
