--- a/packages/@geee-be/react-utils/package.json
+++ b/packages/@geee-be/react-utils/package.json
@@ -37,20 +37,17 @@
     "@uidotdev/usehooks": "^2.4.1"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.20",
-    "@storybook/addon-interactions": "^7.6.20",
-    "@storybook/addon-links": "^7.6.20",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.20",
-    "@storybook/react": "^7.6.20",
-    "@storybook/react-vite": "^7.6.20",
-    "@storybook/test": "^7.6.20",
-    "@types/react": "^18.3.23",
+    "@storybook/addon-docs": "^9.1.4",
+    "@storybook/addon-links": "^9.1.4",
+    "@storybook/addon-onboarding": "^9.1.4",
+    "@storybook/react-vite": "^9.1.4",
+    "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
+    "eslint-plugin-storybook": "9.1.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "storybook": "^7.6.20"
+    "storybook": "^9.1.4"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
