feat: update TypeScript configuration to exclude story and test files; add new CSS styles for cropper and toast components

--- a/packages/@geee-be/react-twui/tsconfig-esm.json
+++ b/packages/@geee-be/react-twui/tsconfig-esm.json
@@ -7,5 +7,6 @@
     "outDir": "./dist/esm",
     "moduleResolution": "Bundler"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["!src/**/*.stories.*", "!src/**/*.test.*"]
 }
