Update release workflow and package.json files to enhance permissions and repository metadata

--- a/packages/@geee-be/react-twui/package.json
+++ b/packages/@geee-be/react-twui/package.json
@@ -16,6 +16,9 @@
     "ui-library",
     "frontend"
   ],
+  "repository": {
+    "url": "https://github.com/geee-be/react-libraries"
+  },
   "license": "MIT",
   "author": "",
   "sideEffects": false,
