--- a/packages/@geee-be/react-utils/package.json
+++ b/packages/@geee-be/react-utils/package.json
@@ -15,6 +15,9 @@
     "frontend",
     "react-hooks"
   ],
+  "repository": {
+    "url": "https://github.com/geee-be/react-libraries"
+  },
   "license": "MIT",
   "author": "Greg Bacchus",
   "type": "module",
